# pipsqueak

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: add_test.cmake  set_warnings.cmake
module-test/: CMakeLists.txt
module-test/src/: Main.cpp  Math.ixx
projects/glad/: CMakeLists.txt
projects/googletest/: CMakeLists.txt
projects/imgui/: CMakeLists.txt
projects/pipsqueak/: CMakeLists.txt
projects/pipsqueak/include/pipsqueak/: App.hpp  BuildInfo.hpp  Common.hpp  Enum.hpp  Time.hpp  Window.hpp
projects/pipsqueak/include/pipsqueak/common/: ForceEvaluation.hpp
projects/pipsqueak/include/pipsqueak/logging/: LogMessage.hpp  LogSeverity.hpp  Logger.hpp  Logging.hpp  MockStream.hpp
projects/pipsqueak/include/pipsqueak/math/: Functions.hpp  Mat4x4.hpp  Transform.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp
projects/pipsqueak/include/pipsqueak/renderer/opengl/: Window.hpp
projects/pipsqueak/include/pipsqueak/renderer/stub/: Window.hpp
projects/pipsqueak/src/: App.cpp  BuildInfo.cpp  Common.cpp  Time.cpp  Window.cpp
projects/pipsqueak/src/logging/: LogMessage.cpp  LogSeverity.cpp  Logger.cpp
projects/pipsqueak/src/math/: Mat4x4.cpp  Vec2.cpp  Vec3.cpp  Vec4.cpp
projects/pipsqueak/src/renderer/opengl/: Window.cpp
projects/pipsqueak/src/renderer/stub/: Window.cpp
projects/playground/: CMakeLists.txt
projects/playground/src/: Main.cpp
tests/: CMakeLists.txt
tests/app_test/: AppTest.cpp
tests/enum_test/: EnumTest.cpp
tests/logging_test/: LoggingTest.cpp
tests/math_tests/: Test.hpp  TestFunctions.cpp  TestMat4x4.cpp  TestTransform.cpp  TestVec2.cpp  TestVec3.cpp  TestVec4.cpp
tests/testing_test/: TestingTest.cpp
